Completed exercise and extension

--- a/index.html
+++ b/index.html
@@ -1,13 +1,64 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
-    
-  </head>
-  <body>
-
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" href="style.css" />
+        <title>
+            Incremental and Decremental Support Vector Machine Learning
+        </title>
+        <style>
+            * {
+                font-family: New York;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Incremental and Decremental Support Vector Machine Learning</h1>
+        <h3>Gert Cauwenberghs</h3>
+        <p>
+            <a href="author-profile.html">Link to other page</a> <br />
+            CLSP, ECE Dept. <br />
+            John Hopkins University <br />
+            Baltimore, MD 21218 <br />
+            <em>gert@jhu.edu</em>
+        </p>
+        <section>
+            <h2>Abstract</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <ol>
+                <li>
+                    <h3>Introduction</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea
+                        commodo consequat. Duis aute irure dolor in
+                        reprehenderit in voluptate velit esse cillum dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit
+                        anim id est laborum.
+                    </p>
+                </li>
+                <li>
+                    <img
+                        src="https://docs.opencv.org/2.4/_images/optimal-hyperplane.png"
+                    />
+                </li>
+            </ol>
+        </section>
+        <a href="https://en.wikipedia.org/wiki/Support_vector_machine">
+            Go to Wikipedia to know more
+        </a>
+    </body>
 </html>
